<resources>
    <string name="app_name">My Project</string>
    <string name="name">Игра</string>
    <string name="level1">Уровень 1</string>
    <string name="level2">Уровень 2</string>
    <string name="level3">Уровень 3</string>
    <string name="level4">Уровень 4</string>
    <string name="level5">Уровень 5</string>
    <string name="Start">Начать</string>
    <string name="Options">Настройки</string>
</resources>